--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -176,5 +176,31 @@ if(MSVC)
     "/EXPORT:?flush_nonempty@raw_ostream@llvm@@AEAAXXZ"
     "/EXPORT:?anchor@raw_ostream@llvm@@EEAAXXZ"
     "/EXPORT:?maybeMangleDeclName@compat@@YAXAEBVGlobalDecl@clang@@AEAV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@@Z"
+"/EXPORT:?grow_pod@?$SmallVectorBase@I@llvm@@IEAAXPEAX_K1@Z"
+"/EXPORT:??0APInt@llvm@@QEAA@IV?$ArrayRef@_K@1@@Z"
+"/EXPORT:?sext@APInt@llvm@@QEBA?AV12@I@Z"
+"/EXPORT:?zext@APInt@llvm@@QEBA?AV12@I@Z"
+"/EXPORT:?allocate_buffer@llvm@@YAPEAX_K0@Z"
+"/EXPORT:?RehashTable@StringMapImpl@llvm@@IEAAII@Z"
+"/EXPORT:?LookupBucketFor@StringMapImpl@llvm@@IEAAIVStringRef@2@I@Z"
+"/EXPORT:?hash@StringMapImpl@llvm@@SAIVStringRef@2@@Z"
+"/EXPORT:?getUnqualifiedDesugaredType@Type@clang@@QEBAPEBV12@XZ"
+"/EXPORT:?getASTContext@Decl@clang@@QEBAAEAVASTContext@2@XZ"
+"/EXPORT:?getAttrs@Decl@clang@@QEBAAEBV?$SmallVector@PEAVAttr@clang@@$03@llvm@@XZ"
+"/EXPORT:?lookup@DeclContext@clang@@QEBA?AVDeclContextLookupResult@2@VDeclarationName@2@@Z"
+"/EXPORT:?isThisDeclarationADefinition@VarDecl@clang@@QEBA?AW4DefinitionKind@12@AEAVASTContext@2@@Z"
+"/EXPORT:?isInjectedClassName@RecordDecl@clang@@QEBA_NXZ"
+"/EXPORT:__imp_?classof@CUDAGlobalAttr@clang@@SA_NPEBVAttr@2@@Z"
+"/EXPORT:?getTypeDeclTypeSlow@ASTContext@clang@@AEBA?AVQualType@2@PEBVTypeDecl@2@@Z"
+"/EXPORT:?getComplexType@ASTContext@clang@@QEBA?AVQualType@2@V32@@Z"
+"/EXPORT:?createMangleContext@ASTContext@clang@@QEAAPEAVMangleContext@2@PEBVTargetInfo@2@@Z"
+"/EXPORT:?getSpecializations@ClassTemplateDecl@clang@@IEBAAEAV?$FoldingSetVector@VClassTemplateSpecializationDecl@clang@@V?$SmallVector@PEAVClassTemplateSpecializationDecl@clang@@$07@llvm@@@llvm@@XZ"
+"/EXPORT:?getSpecializedTemplate@VarTemplateSpecializationDecl@clang@@QEBAPEAVVarTemplateDecl@2@XZ"
+"/EXPORT:?shouldMangleDeclName@MangleContext@clang@@QEAA_NPEBVNamedDecl@2@@Z"
+"/EXPORT:?mangleName@MangleContext@clang@@QEAAXVGlobalDecl@2@AEAVraw_ostream@llvm@@@Z"
+"/EXPORT:?getStdNamespace@Sema@clang@@QEBAPEAVNamespaceDecl@2@XZ"
+"/EXPORT:?castToDeclContext@Decl@clang@@SAPEAVDeclContext@2@PEBV12@@Z
+"/EXPORT:?decls_begin@DeclContext@clang@@QEBA?AVdecl_iterator@12@XZ"
+"/EXPORT:?classof@DeclContext@clang@@SA_NPEBVDecl@2@@Z"
   )
 endif()
