Try new solution

--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -148,69 +148,7 @@ set_source_files_properties(CppInterOp.cpp PROPERTIES COMPILE_DEFINITIONS
 )
 
 if(MSVC)
-  target_link_options(clangCppInterOp PRIVATE
-    "/EXPORT:?write@raw_ostream@llvm@@QEAAAEAV12@PEBD_K@Z"
-    "/EXPORT:?errs@llvm@@YAAEAVraw_fd_ostream@1@XZ"
-    "/EXPORT:?DestroyDataAndMakeUninit@APValue@clang@@AEAAXXZ"
-    "/EXPORT:?dbgs@llvm@@YAAEAVraw_ostream@1@XZ"
-    "/EXPORT:?fatalUncheckedError@Error@llvm@@AEBAXXZ"
-    "/EXPORT:?logAllUnhandledErrors@llvm@@YAXVError@1@AEAVraw_ostream@1@VTwine@1@@Z"
-    "/EXPORT:?isFloatingType@Type@clang@@QEBA_NXZ"
-    "/EXPORT:?getDecl@TagType@clang@@QEBAPEAVTagDecl@2@XZ"
-    "/EXPORT:?hasDefiningAttr@Decl@clang@@QEBA_NXZ"
-    "/EXPORT:?getNumParams@FunctionDecl@clang@@QEBAIXZ"
-    "/EXPORT:?getTemplateInstantiationPattern@FunctionDecl@clang@@QEBAPEAV12@_N@Z"
-    "/EXPORT:?getTemplateSpecializationArgs@FunctionDecl@clang@@QEBAPEBVTemplateArgumentList@2@XZ"
-    "/EXPORT:?initSlowCase@APInt@llvm@@AEAAX_K_N@Z"
-    "/EXPORT:?compare@APInt@llvm@@AEBAHAEBV12@@Z"
-    "/EXPORT:?compareSigned@APInt@llvm@@AEBAHAEBV12@@Z"
-    "/EXPORT:?compareValues@APSInt@llvm@@SAHAEBV12@0@Z"
-    "/EXPORT:??1raw_ostream@llvm@@UEAA@XZ"
-    "/EXPORT:??1raw_string_ostream@llvm@@UEAA@XZ"
-    "/EXPORT:?write_impl@raw_string_ostream@llvm@@EEAAXPEBD_K@Z"
-    "/EXPORT:?changeColor@raw_ostream@llvm@@UEAAAEAV12@W4Colors@12@_N1@Z"
-    "/EXPORT:?resetColor@raw_ostream@llvm@@UEAAAEAV12@XZ"
-    "/EXPORT:?reverseColor@raw_ostream@llvm@@UEAAAEAV12@XZ"
-    "/EXPORT:?preferred_buffer_size@raw_ostream@llvm@@MEBA_KXZ"
-    "/EXPORT:?SetBufferAndMode@raw_ostream@llvm@@AEAAXPEAD_KW4BufferKind@12@@Z"
-    "/EXPORT:?flush_nonempty@raw_ostream@llvm@@AEAAXXZ"
-    "/EXPORT:?anchor@raw_ostream@llvm@@EEAAXXZ"
-    "/EXPORT:?maybeMangleDeclName@compat@@YAXAEBVGlobalDecl@clang@@AEAV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@@Z"
-"/EXPORT:?grow_pod@?$SmallVectorBase@I@llvm@@IEAAXPEAX_K1@Z"
-"/EXPORT:??0APInt@llvm@@QEAA@IV?$ArrayRef@_K@1@@Z"
-"/EXPORT:?sext@APInt@llvm@@QEBA?AV12@I@Z"
-"/EXPORT:?zext@APInt@llvm@@QEBA?AV12@I@Z"
-"/EXPORT:?allocate_buffer@llvm@@YAPEAX_K0@Z"
-"/EXPORT:?RehashTable@StringMapImpl@llvm@@IEAAII@Z"
-"/EXPORT:?LookupBucketFor@StringMapImpl@llvm@@IEAAIVStringRef@2@I@Z"
-"/EXPORT:?hash@StringMapImpl@llvm@@SAIVStringRef@2@@Z"
-"/EXPORT:?getUnqualifiedDesugaredType@Type@clang@@QEBAPEBV12@XZ"
-"/EXPORT:?getASTContext@Decl@clang@@QEBAAEAVASTContext@2@XZ"
-"/EXPORT:?getAttrs@Decl@clang@@QEBAAEBV?$SmallVector@PEAVAttr@clang@@$03@llvm@@XZ"
-"/EXPORT:?lookup@DeclContext@clang@@QEBA?AVDeclContextLookupResult@2@VDeclarationName@2@@Z"
-"/EXPORT:?isThisDeclarationADefinition@VarDecl@clang@@QEBA?AW4DefinitionKind@12@AEAVASTContext@2@@Z"
-"/EXPORT:?isInjectedClassName@RecordDecl@clang@@QEBA_NXZ"
-"/EXPORT:?getTypeDeclTypeSlow@ASTContext@clang@@AEBA?AVQualType@2@PEBVTypeDecl@2@@Z"
-"/EXPORT:?getComplexType@ASTContext@clang@@QEBA?AVQualType@2@V32@@Z"
-"/EXPORT:?createMangleContext@ASTContext@clang@@QEAAPEAVMangleContext@2@PEBVTargetInfo@2@@Z"
-"/EXPORT:?getSpecializations@ClassTemplateDecl@clang@@IEBAAEAV?$FoldingSetVector@VClassTemplateSpecializationDecl@clang@@V?$SmallVector@PEAVClassTemplateSpecializationDecl@clang@@$07@llvm@@@llvm@@XZ"
-"/EXPORT:?getSpecializedTemplate@VarTemplateSpecializationDecl@clang@@QEBAPEAVVarTemplateDecl@2@XZ"
-"/EXPORT:?shouldMangleDeclName@MangleContext@clang@@QEAA_NPEBVNamedDecl@2@@Z"
-"/EXPORT:?mangleName@MangleContext@clang@@QEAAXVGlobalDecl@2@AEAVraw_ostream@llvm@@@Z"
-"/EXPORT:?getStdNamespace@Sema@clang@@QEBAPEAVNamespaceDecl@2@XZ"
-"/EXPORT:?castToDeclContext@Decl@clang@@SAPEAVDeclContext@2@PEBV12@@Z"
-"/EXPORT:?decls_begin@DeclContext@clang@@QEBA?AVdecl_iterator@12@XZ"
-"/EXPORT:?classof@DeclContext@clang@@SA_NPEBVDecl@2@@Z"
-"/EXPORT:?Parse@Interpreter@clang@@QEAA?AV?$Expected@AEAUPartialTranslationUnit@clang@@@llvm@@VStringRef@4@@Z"
-"/EXPORT:?Execute@Interpreter@clang@@QEAA?AVError@llvm@@AEAUPartialTranslationUnit@2@@Z"
-"/EXPORT:?getLValueReferenceType@ASTContext@clang@@QEBA?AVQualType@2@V32@_N@Z"
-"/EXPORT:?getCompilerInstance@Interpreter@clang@@QEAAPEAVCompilerInstance@2@XZ"
-"/EXPORT:?RunningOnValgrind@sys@llvm@@YA_NXZ"
-"/EXPORT:?grow_pod@?$SmallVectorBase@_K@llvm@@IEAAXPEAX_K1@Z"
-"/EXPORT:?access@fs@sys@llvm@@YA?AVerror_code@std@@AEBVTwine@3@W4AccessMode@123@@Z"
-"/EXPORT:?CreateCpp@IncrementalCompilerBuilder@clang@@QEAA?AV?$Expected@V?$unique_ptr@VCompilerInstance@clang@@U?$default_delete@VCompilerInstance@clang@@@std@@@std@@@llvm@@XZ"
-"/EXPORT:__imp_?classof@DeclContext@clang@@SA_NPEBVDecl@2@@Z"
-"/EXPORT:?getMainExecutable@fs@sys@llvm@@YA?AV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@PEBDPEAX@Z"
-"/EXPORT:?parent_path@path@sys@llvm@@YA?AVStringRef@3@V43@W4Style@123@@Z"
+  set_target_properties(clangCppInterOp PROPERTIES
+      LINK_FLAGS "/DEF:${CMAKE_CURRENT_SOURCE_DIR}/clangCppInterOp.def"
   )
 endif()
