--- a/.github/workflows/Windows-arm.yml
+++ b/.github/workflows/Windows-arm.yml
@@ -69,10 +69,8 @@ jobs:
     - name: Setup compiler
       uses: ./.github/actions/Miscellaneous/Setup_Compiler
 
-    - name: Install deps on Windows
-      run: |
-        choco install findutils
-        $env:PATH="C:\Program Files (x86)\GnuWin32\bin;$env:PATH"
+    - name: Install dependencies
+      uses: ./.github/actions/Miscellaneous/Install_Dependencies
 
     - name: Build LLVM-${{ matrix.clang-runtime }} and ${{ matrix.cling == 'On' && 'Cling' || 'Clang-REPL' }}
       uses: ./.github/actions/Build_LLVM
