--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -716,7 +716,7 @@ jobs:
         ./emsdk/emsdk activate ${{matrix.emsdk_ver}}
         source ./emsdk/emsdk_env.sh
         micromamba activate CppInterOp-wasm
-        git clone --depth=1 https://github.com/compiler-research/xeus-cpp.git
+        git clone https://github.com/compiler-research/xeus-cpp.git
         cd ./xeus-cpp
         git reset --hard HEAD~1
         mkdir build
